Alterações de Textos + Complementos

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         </div>
         <div class="title-presentation">
           <h1>
-            <div class="align-title">Sou programadora</div>
-            posto tudo no Linkedin sobre meu dia a dia
+            <div class="align-title">Sou programadora,</div>
+            atualizo o meu LinkedIn diariamente com posts sobre o meu dia a dia e participações de eventos.
           </h1>
           <br />
         </div>
         <div class="subtitle-presentation">
           Sou uma engenheira de software full stack com mais de 8 anos de
           experiência profissional,<br />
-          especializada em desenvolvimento back-end. Minha especialidade está
+          especializada em desenvolvimento de back-end. Minha especialidade está
           na<br />
-          elaboração robusta escalável baseado em SaaS<br />
+          elaboração robusta escalável baseado em SaaS,<br />
           arquiteturas na plataforma Amazon AWS.
         </div>
         <div class="buttons">
-          <button class="btn-linkedin">Linkedin</button>
-          <button class="btn-github">Github</button>
+          <button class="btn-linkedin">LinkedIn</button>
+          <button class="btn-github">GitHub</button>
         </div>
       </section>
       <section class="stack" id="stack">
@@ -89,9 +89,9 @@
           </div> 
         </div>
         <p class="description">
-          Como engenheira de software sênior no Google, desempenhei um papel fundamental no desenvolvimento de soluções inovadoras para os principais algoritmos de pesquisa do Google. Colaborar com uma equipa dinâmica de
-          engenheiros, contribuí para o aprimoramento
-          precisão e eficiência da pesquisa, otimizando as experiências do usuário para
+          Como engenheira de software sênior no Google, desempenhei um papel fundamental no desenvolvimento de soluções inovadoras 
+          para os principais algoritmos de pesquisa do Google. Colaborar com uma equipa dinâmica de engenheiros, 
+          contribuí para o aprimoramento precisão e eficiência da pesquisa, otimizando as experiências do usuário para
           milhões de usuários em todo o mundo.
         </p>
         <div class="experience-text">
@@ -103,9 +103,9 @@
           </div>
         </div>
         <p class="description">
-          Na Meta, atuei como Engenheira de Software, com foco no design e
-          implementação de sistemas backend para a plataforma dinâmica do gigante das mídias sociais. Trabalhando em projetos que
-          envolvia processamento de dados em grande escala e recursos de envolvimento do usuário, aproveitei minha experiência para garantir
+          Na Meta, atuei como Engenheira de Software, com foco no design e implementação de sistemas backend 
+          para a plataforma dinâmica do gigante das mídias sociais. Trabalhando em projetos que envolvia processamento de dados 
+          em grande escala e recursos de envolvimento do usuário, aproveitei minha experiência para garantir
           funcionalidade e escalabilidade.
         </p>
       </div>
@@ -115,13 +115,13 @@
     <footer>
       <div class="contact-content" id=contact>
         <div class="contact">Contato</div>
-        Engenheira de software Full Stack experiente com mais de 8 anos de experiência prática
-        experiência em projetar e implementar soluções robustas, escaláveis ​​e
+        Engenheira de software Full Stack experiente com mais de 8 anos de experiência prática.
+        Experiência em projetar e implementar soluções robustas, escaláveis ​​e
         soluções web inovadoras. Hábil em aproveitar um conjunto abrangente de habilidades
-        abrangendo tecnologias front-end e back-end
+        abrangendo tecnologias front-end e back-end.
         <div class="align-iconemail">
           <img src="./assets/img/email.png" alt="logo de carta" />
-          <div>abcdefghi@gmail.com</div>
+          <div>namelinkedin@gmail.com</div>
         </div>
         <div class="align-socials">
           <img
